# torand

./: .gitignore  README.md  setup.cfg
torand/: __init__.py  __main__.py  torand.py
