[metadata]
name = torand
version = attr: torand.__version__
description = Derive real random bytes from time differences between the executions of the code, implemented in python.
keywords = real random bytes
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/hfxunlp/torand
author = Hongfei Xu
author_email = hfxunlp@foxmail.com
maintainer = Hongfei Xu
maintainer_email = hfxunlp@foxmail.com
license = GNU General Public License v3 (GPLv3)
license_files = LICENSE
classifiers =
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Scientific/Engineering
	Topic :: Security :: Cryptography
	Topic :: Utilities

[options]
packages = torand
zip_safe = True

[options.entry_points]
console_scripts =
	torand = torand.__main__:cli
